# rust-gguf-tools

./: .gitignore  Cargo.toml  PLAN.md  README.md  ft-guide.md  hf_to_gguf.py  merge.py  project.md  requirements.txt
crates/gguf-core/: Cargo.toml
crates/gguf-core/src/: decoder.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/gguf-validate/: Cargo.toml
crates/gguf-validate/src/: main.rs
gguf-inspect/: Cargo.toml
gguf-inspect/src/: main.rs
gguf-writer/: Cargo.toml
gguf-writer/src/: hf_config_to_gguf.rs  main.rs  write_gguf.rs
quantize-rs/: Cargo.toml
quantize-rs/src/: main.rs
